--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+auxlaunch (0.5-2) unstable; urgency=low
+
+  * Added reload patch
+
+ -- Christian M. Amsüss <chrysn@fsfe.org>  Mon, 03 Nov 2008 19:23:32 +0100
+
 auxlaunch (0.5-1) unstable; urgency=low
 
   * New Upstream Version
